fix(grids): decrease the gap between the items on the lables grid

--- a/src/components/grids/labels/styles.css
+++ b/src/components/grids/labels/styles.css
@@ -1,5 +1,5 @@
 .labels-grid {
-  gap: 10px;
+  gap: 7px;
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 5px;
